# entropy

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_LANGUAGE.md  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
docs/release-notes/: 0.1.0-beta.1.md
i18n/: README.md  en.toml  ru.toml
installer/: entropy.iss
linux/fcitx5/: CMakeLists.txt  README.md  entropyuniversalsymbols.conf  install-user.sh
linux/fcitx5/src/: entropyuniversalsymbols.cpp
linux/ibus/: README.md  entropy-ibus-engine  entropy-universal-symbols.xml.in  install-user.sh  uninstall-user.sh
linux/udev/: install-vial-rules.sh
scripts/: build_macos_app.sh  build_windows_installer.ps1  check_i18n.py
src/: app.rs  app_icon.rs  app_init.rs  app_state.rs  app_storage.rs  app_theme.rs  device.rs  entlayout.rs  entsettings.rs  firmware.rs  hid.rs  hid_dynamic.rs  hid_keymap.rs  hid_macros.rs  hid_parse.rs  hid_protocol.rs  hid_settings.rs  hid_vial.rs  i18n.rs  keyboard.rs  keycode.rs  keycode_picker.rs  keycode_picker_basic.rs  keycode_picker_keyboard.rs  keycode_picker_lighting_quantum.rs  keycode_picker_macro.rs  keycode_picker_model.rs  keycode_picker_popups.rs  keycode_picker_special.rs  keycode_picker_tabs.rs  keycode_picker_tap_dance.rs  keycode_picker_tap_dance_picker.rs  keycode_picker_ui.rs  layouts.rs  linux_setup.rs  main.rs  popup_state.rs  qmk_hid_host.rs  smart_input.rs  smart_input_symbols.rs  (+7 more)
src/layouts/: imperial44.json  k03.json  op36.json
src/ui/: alt_repeat_settings.rs  app_lifecycle.rs  app_settings.rs  auto_shift_settings.rs  combo_settings.rs  device_connect_apply.rs  device_connect_task.rs  device_connection.rs  device_scan.rs  device_settings_helpers.rs  encoder_visibility_settings.rs  grave_escape_settings.rs  key_assignment.rs  key_override_settings.rs  layer_led_settings.rs  layout_advanced_dropdown.rs  layout_chrome.rs  layout_device_dropdown.rs  layout_dropdowns.rs  layout_hints.rs  layout_indicator.rs  layout_indicator_preview.rs  layout_indicator_window.rs  layout_keyboard.rs  layout_layer_switcher.rs  layout_options_settings.rs  layout_settings_dropdown.rs  layout_shared.rs  layout_top_tabs.rs  layout_view.rs  lazy_feature_load.rs  live_features_settings.rs  macro_save.rs  magic_settings.rs  matrix_tester.rs  module_settings.rs  mouse_keys_settings.rs  onboarding_tour.rs  onboarding_tour_state.rs  rgb_settings.rs  (+12 more)
src/vial/: unlock.rs
