[package]
name = "entropy"
version = "1.13.85"
edition = "2021"
description = "Entropy"
authors = ["Ergohaven"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ergohaven/entropy"
build = "build.rs"

[[bin]]
name = "entropy"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
dirs = "5"
lzma-rs = "0.3"
anyhow = "1"
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hidapi = "2.6"
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
tray-icon = "0.22"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Globalization", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.56", features = ["Foundation", "Media_Control", "Win32_Media_Audio_Endpoints", "Win32_System_Com_StructuredStorage"] }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
strip = true
